<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/country" />

    <EditText
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/state" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description" />
    
    <EditText
        android:id="@+id/institution_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/institution_area" />
    
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/public_sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_sector" />

        <RadioButton
            android:id="@+id/private_sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_sector" />
    </RadioGroup>
    
    <EditText
        android:id="@+id/institution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/institution" />
    
    <Button
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="createNewAnnouncement"
        android:text="@string/publish" />

</LinearLayout>